--- a/dashboard/elements/panel-body/panel-body.html
+++ b/dashboard/elements/panel-body/panel-body.html
@@ -26,7 +26,7 @@
 			}
 
 			#flaggedList {
-				height: 240px;
+				height: 180px;
 			}
 
 			#buttons {
@@ -86,6 +86,7 @@
 				<paper-input id="amount" label="Amount" type="number" hidden="[[isSubscription(selectedType)]]" style="flex-shrink: 4;"
 							 min="0"></paper-input>
 			</div>
+			<paper-input id="comment" label="Comment" type="text"></paper-input>
 
 			<paper-button id="send" class="nodecg-info" raised on-tap="send">
 				<span>[[_calcSendButtonText(selectedType)]]</span>
