--- a/dashboard/elements/list-note/list-note.html
+++ b/dashboard/elements/list-note/list-note.html
@@ -1,7 +1,7 @@
-<link rel="import" href="../../components/polymer/polymer.html">
-<link rel="import" href="../../components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../../components/iron-icons/iron-icons.html">
-<link rel="import" href="../../components/paper-styles/shadow.html">
+<link rel="import" href="../../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../../bower_components/paper-styles/shadow.html">
 
 <dom-module id="list-note">
 	<template>
@@ -117,4 +117,3 @@
 
 	<script src="list-note.js"></script>
 </dom-module>
-
