--- a/dashboard/elements/panel-body/panel-body.html
+++ b/dashboard/elements/panel-body/panel-body.html
@@ -1,11 +1,11 @@
-<link rel="import" href="../../components/boe-list/boe-list.html">
-<link rel="import" href="../../components/iron-flex-layout/iron-flex-layout.html">
-<link rel="import" href="../../components/iron-icons/iron-icons.html">
-<link rel="import" href="../../components/paper-button/paper-button.html">
-<link rel="import" href="../../components/paper-dialog/paper-dialog.html">
-<link rel="import" href="../../components/paper-input/paper-input.html">
-<link rel="import" href="../../components/paper-tabs/paper-tab.html">
-<link rel="import" href="../../components/paper-tabs/paper-tabs.html">
+<link rel="import" href="../../../bower_components/boe-list/boe-list.html">
+<link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../../../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../../../bower_components/paper-tabs/paper-tab.html">
+<link rel="import" href="../../../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../list-note/list-note.html">
 
 <dom-module id="panel-body">
