--- a/dashboard/elements/list-note/list-note.html
+++ b/dashboard/elements/list-note/list-note.html
@@ -106,7 +106,7 @@
 				<div id="comment">gifted to <a href="[recipientUrl]">[[recipient]]</a></div>
 			</template>
 
-			<template is="dom-if" if="[[_isType('submysterygift')]]">
+			<template is="dom-if" if="[[_isType(type, 'submysterygift')]]">
 				<div id="comment">gifted to [[amount]] users</div>
 			</template>
 		</div>
