Implemented Raid threshold

--- a/dashboard/elements/panel-body/panel-body.html
+++ b/dashboard/elements/panel-body/panel-body.html
@@ -197,6 +197,12 @@
 				type="number">
 			</paper-input>
 
+			<paper-input
+				id="minimumRaidThreshold"
+				label="Minimum Raid Threshold"
+				type="number">
+			</paper-input>
+
 			<div class="buttons">
 				<paper-button dialog-dismiss>Cancel</paper-button>
 				<paper-button dialog-confirm autofocus on-tap="_settingsDialogAccepted">Accept</paper-button>
